:lipstick: fix caption visibility in slider

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,9 @@ body {
   margin-bottom: 3em !important;
 }
 
-.bx-viewport {
+.bx-viewport,
+.bxslider,
+.bxslider > div {
   height: 100% !important;
 }
 
